--- a/scr/index.html
+++ b/scr/index.html
@@ -15,4 +15,4 @@
     }
 </style>
 <P>WARNING: Violence in the form of cartoony gore and guns.</P>
-<button><a href="ScratchCatRampage.zip">Download</a></button>
+<button><a href="https://drive.google.com/file/d/1HNwCWSRiOK235-eCrv50FoitDfPGDSz4/view?usp=share_link">Download</a></button>
